# ansak-lib

./: .gitmodules  CMakeLists.txt  FindANSAK.cmake  LICENSE  Makefile  README.BUILDING.md  README.md  configure  configure.cmd  configure.py  make.py  packaging.cmake  project.py
NSIS/: ansak-lib.nsi
cmake/modules/: FindANSAK.cmake
docs/: layers.txt
interface/: config.hxx  file_path.hxx  temp_directory.hxx
mock/: CMakeLists.txt
mock/file/: CMakeLists.txt  mock_file_handle.cxx  mock_file_handle_exception.cxx  mock_file_system_path.cxx  mock_file_system_path.hxx
mock/file-tools/: CMakeLists.txt  mock_file_of_lines.cxx  mock_file_of_lines.hxx  mock_file_of_lines_core.cxx  mock_file_of_lines_core.hxx  mock_file_of_lines_exception.cxx  mock_file_of_lines_iterator.cxx
mock/os/: CMakeLists.txt  mock_operating_system.hxx  mock_registry.cxx  mock_registry.hxx
mock/sqlite/: CMakeLists.txt
source/: CMakeLists.txt
source/config/: CMakeLists.txt  config.cxx  config_atom.cxx  config_io_registry.cxx
source/file/: CMakeLists.txt  file_handle.cxx
source/file-tools/: CMakeLists.txt  file_of_lines.cxx  file_of_lines_core.cxx  text_file_utilities.cxx
source/include/: operating_system_primitives.hxx  windows_registry_key.hxx
source/os/: CMakeLists.txt
source/os/linux/: CMakeLists.txt  linux_directory_scanner.cxx  linux_directory_scanner.hxx  os_layer_linux.cxx  os_layer_linux.hxx
source/os/win32/: CMakeLists.txt  os_layer_windows.cxx  os_layer_windows.hxx  windows_directory_scanner.cxx  windows_directory_scanner.hxx  windows_registry_key.cxx
source/primitives/: CMakeLists.txt  file_path.cxx  parse_args.cxx
source/sqlite/: CMakeLists.txt  sqlite_db.cxx  sqlite_exception.cxx
submods/: CMakeLists.txt
test/: CMakeLists.txt  init_test.cxx
test/integration/: CMakeLists.txt
test/integration/config/: CMakeLists.txt
test/integration/file/: CMakeLists.txt  file_system_path_itest.cxx
test/integration/file-tools/: CMakeLists.txt  ifile_of_lines.cxx  ifile_of_lines_core.cxx  pensees-ascii.txt
test/integration/sqlite/: CMakeLists.txt  sqliteDBTest.cxx  sqlitePragmaTest.cxx
test/unit/: CMakeLists.txt
test/unit/config/: CMakeLists.txt  config_path_test.cxx  config_test.cxx
test/unit/file/: CMakeLists.txt  file_handle_test.cxx  file_system_path_test.cxx
test/unit/file-tools/: CMakeLists.txt  file_of_lines_core_test.cxx  file_of_lines_exception_test.cxx  file_of_lines_test.cxx  temp_directory_test.cxx  text_file_utilities_test.cxx
test/unit/os/: CMakeLists.txt  test_os_layer.cxx  test_win32_registry.cxx
test/unit/primitives/: CMakeLists.txt  file_path_test.cxx
test/unit/sqlite/: CMakeLists.txt  test_sqlite_db.cxx  test_sqlite_exception.cxx  test_sqlite_pragmas.cxx  test_sqlite_statement.cxx
